checking for fields in the registration

--- a/SmartEatDemo/app/src/main/AndroidManifest.xml
+++ b/SmartEatDemo/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".EntranceActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
