--- a/SmartEatDemo/app/src/main/AndroidManifest.xml
+++ b/SmartEatDemo/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity
             android:name=".ProfileActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".RegistrationActivity"
             android:exported="false" />
