Изменения: Возможности переходов по нижней панели с разных фреймов. Небольшие корректировки dish_frame.xml, DishActivity.java, manual_search_results_frame.xml, ManualSearchResultsActivity.java, strings.xml.
Новое:
diary_frame.xml и DiaryActivity.java фрейм для дневника
diary.xml для отображения добавленного блюда в списке
magnifiter_icon.xml иконка лупы

--- a/SmartEatDemo/app/src/main/AndroidManifest.xml
+++ b/SmartEatDemo/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.SmartEatDemo"
         tools:targetApi="31">
         <activity
+            android:name=".DiaryActivity"
+            android:exported="false" />
+        <activity
             android:name=".DishActivity"
             android:exported="false" />
         <activity
